<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".AuidoTrimmer.AudioTrimmerActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#80000000"
        android:layout_weight="0.8" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/white"
        android:weightSum="2">

        <TextView
            android:id="@+id/txt_upload"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/btn_color_border"
            android:backgroundTint="@color/global__primary"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="Upload"
            android:textColor="#FFFFFF"
            android:textSize="18dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/txt_reset"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@drawable/btn_color_border"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/reset"
            android:textColor="#df204a"
            android:textSize="18dp"
            android:textStyle="normal" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:background="@color/white"
        android:layout_weight="1">

        <!--ImageView
         android:id="@+id/bkgnd"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:scaleType="centerCrop"
         android:src="@drawable/bkgnd"-->

        <com.dating.klicked.AuidoTrimmer.WaveformView
            android:id="@+id/waveform"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginStart="2dp"
            android:layout_marginTop="05dp"
            android:layout_marginEnd="2dp" />

        <com.dating.klicked.AuidoTrimmer.MarkerView
            android:id="@+id/startmarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/start_marker"
            android:nextFocusDown="@+id/endmarker"
            android:src="@drawable/marker_left" />

        <com.dating.klicked.AuidoTrimmer.MarkerView
            android:id="@+id/endmarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/end_marker"
            android:nextFocusUp="@+id/startmarker"
            android:nextFocusDown="@+id/info"
            android:src="@drawable/marker_right" />

    </RelativeLayout>

    <TextView
        android:id="@+id/info"
        style="@style/AudioFileInfoOverlayText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/white"
        android:nextFocusUp="@+id/endmarker"
        android:nextFocusDown="@+id/play" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="62dip"
        android:layout_marginBottom="5dp"
        android:background="@color/white"
        android:gravity="center">

        <ImageButton
            android:id="@+id/rew"
            style="@android:style/MediaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dip"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="6dip"
            android:contentDescription="@string/rewind"
            android:src="@drawable/ic_media_previous" />

        <ImageButton
            android:id="@+id/play"
            style="@android:style/MediaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dip"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="6dip"
            android:contentDescription="@string/play"
            android:src="@drawable/ic_media_play" />

        <ImageButton
            android:id="@+id/ffwd"
            style="@android:style/MediaButton"
            android:layout_width="64dip"
            android:layout_height="52dip"
            android:layout_marginTop="6dip"
            android:layout_marginRight="5dip"
            android:layout_marginBottom="6dip"
            android:contentDescription="@string/ffwd"
            android:src="@drawable/ic_media_next" />

    </LinearLayout>

    <LinearLayout style="@style/HorizontalDividerTop" />

    <LinearLayout style="@style/HorizontalDividerBottom" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="62dip"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mark_start"
            android:layout_width="wrap_content"
            android:layout_height="31dip"
            android:clickable="true"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:labelFor="@+id/starttext"
            android:text="@string/start_label"
            android:textColor="#df204a"
            android:textSize="14sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/starttext"
            android:layout_width="70dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="30dip"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:inputType="number|numberDecimal"
            android:textColor="#df204a"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/mark_end"
            android:layout_width="wrap_content"
            android:layout_height="31dip"
            android:clickable="true"
            android:gravity="center"
            android:labelFor="@+id/endtext"
            android:text="@string/end_label"
            android:textColor="#df204a"
            android:textSize="14sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/endtext"
            android:layout_width="70dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:inputType="number|numberDecimal"
            android:textColor="#df204a"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>



