<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragment.Profile.MusicDespriction">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="Audio Description"
                android:textColor="@color/text_tittle"
                android:textSize="15dp" />

            <RelativeLayout
                android:id="@+id/relative1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/location"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/btn_border">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="08dp"
                    android:src="@drawable/ic_wave_audio" />


                <LinearLayout
                    android:id="@+id/linear"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="15dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_pause"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_icon_pause_circle"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/img_play"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_icon_feather_play_circle" />
                </LinearLayout>
            </RelativeLayout>


            <TextView
                android:id="@+id/audioupdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/change"
                android:textColor="@color/global__primary"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/recordUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/record"
                android:textColor="@color/global__primary"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="Music"
                android:textColor="@color/text_tittle"
                android:textSize="15dp"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fav_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/add_fav_music"
                android:layout_below="@id/txt_ques"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:visibility="gone"
                tools:itemCount="3"
                tools:listitem="@layout/custom_fav_music_layout" />

            <TextView
                android:id="@+id/musicUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/update"
                android:textColor="@color/global__primary"
                android:textSize="15dp"
                android:visibility="gone" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>